configurable affinity and nodeSelector for prom server

--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -209,3 +209,11 @@ serviceDiscoveries:
 # The pod's tolerations.
 # See https://kubernetes.io/docs/concepts/configuration/taint-and-toleration
 tolerations: []
+
+# Assign custom affinity rules to the prometheus instance.
+# See https://kubernetes.io/docs/concepts/configuration/assign-pod-node
+affinity: {}
+
+# Define which Nodes the Pods are scheduled on.
+# See https://kubernetes.io/docs/user-guide/node-selection
+nodeSelector: {}
