[mariadb] more suitable config for services with higher load

--- a/common/mariadb/templates/etc-configmap.yaml
+++ b/common/mariadb/templates/etc-configmap.yaml
@@ -11,7 +11,9 @@ metadata:
 data:
   mariadb.cnf: |
     [mysqld]
-    max_connections	    = 250
-    innodb_buffer_pool_size = 512M
+    max_connections         = 500
+    innodb_buffer_pool_size = 800M
+    innodb_log_file_size    = 200M
     innodb_open_files       = 1000
+    innodb_stats_on_metadata= 0
     sql_mode                = "TRADITIONAL"
