--- a/system/disco/templates/seed.yaml
+++ b/system/disco/templates/seed.yaml
@@ -1,5 +1,4 @@
-{{- if and .Values.enabled .Values.seed.enabled }}
-
+{{- if .Values.seed.enabled }}
 apiVersion: "openstack.stable.sap.cc/v1"
 kind: OpenstackSeed
 metadata:
@@ -30,5 +29,4 @@ spec:
             # Permissions to create, read, update, delete records.
             - user: {{ required ".Values.openstack.username missing" .Values.openstack.username }}@{{ required ".Values.openstack.userDomainName missing" .Values.openstack.userDomainName }}
               role: cloud_dns_admin
-
-{{- end }}
+{{ end }}
