--- a/system/disco/values.yaml
+++ b/system/disco/values.yaml
@@ -1,6 +1,3 @@
-# Enable the DISCO operator.
-enabled: false
-
 image:
   repository: sapcc/disco
   tag: v201907101600
@@ -12,17 +9,11 @@ rbac:
 # Enable debug logging.
 debug: false
 
-# Port to expose metrics on.
-metricPort: 9091
-
 # TTL for the recordsets.
 recordsetTTL: 1800
 
-# Only an ingress' with this annotation will be considered.
+# Only an ingress with this annotation will be considered.
 ingressAnnotation: "disco"
-
-# Record which should be used. e.g.: 'ingress.domain.tld.' .
-record:
 
 # Enable the OpenStack seed for the service user described in the openstack section below.
 seed:
@@ -37,5 +28,16 @@ openstack: {}
   # password:           DEFINED-IN-SECRETS
   # projectName:        DEFINED-IN-SECRETS
   # projectDomainName:  DEFINED-IN-SECRETS
-  # the name of the zone in which the record should be created
+  # The name of the zone in which the record should be created
   # zoneName:           DEFINED-IN-SECRETS
+
+# Record which should be used. e.g.: 'ingress.domain.tld.'. Must be provided.
+# record: DEFINED-IN-SECRETS
+
+# Prometheus metrics.
+metrics:
+  # Port to expose metrics on.
+  port: 9091
+  # Name of the Prometheis by which the metrics will be scraped.
+  # Can be a comma (,) separated list.
+  prometheus: kubernetes
