--- a/system/kube-system/requirements.yaml
+++ b/system/kube-system/requirements.yaml
@@ -7,3 +7,11 @@ dependencies:
     repository: file://vendor/conntrack-nanny
     version: 0.1.0
     condition: conntrack-nanny.enabled
+
+  - name: vice-president
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.3
+
+  - name: disco
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.1
