--- a/system/kube-system/requirements.yaml
+++ b/system/kube-system/requirements.yaml
@@ -9,10 +9,10 @@ dependencies:
     condition: conntrack-nanny.enabled
 
   - name: vice-president
-    repository: https://charts.eu-de-2.cloud.sap
+    repository: file://../vice-president
     version: 1.0.3
 
   - name: disco
-    repository: https://charts.eu-de-2.cloud.sap
-    version: 1.0.1
+    repository: file://../disco
+    version: 1.1.0
     condition: disco.enabled
