--- a/system/vice-president/values.yaml
+++ b/system/vice-president/values.yaml
@@ -86,4 +86,5 @@ president:
 alerts:
   enabled: true
   # Name of the Prometheus to which the alerts should be assigned to.
+  # Can be a comma-separated list.
   prometheus: kubernetes
