--- a/system/vice-president/templates/deployment.yaml
+++ b/system/vice-president/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       annotations:
         prometheus.io/scrape: 'true'
         prometheus.io/port: {{ default 9091 .Values.president.metricsPort | quote }}
-        prometheus.io/targets:  {{ required ".Values.alerts.prometheus missing" $values.alerts.prometheus }}
+        prometheus.io/targets:  {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
     spec:
       containers:
         - name: {{ .Chart.Name }}
