--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -84,6 +84,6 @@ dependencies:
 
   - name: ping-exporter
     alias: ping_exporter
-    repository: file://vendor/ping-exporter
+    repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.0
     condition: ping_exporter.enabled
