--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -78,8 +78,8 @@ dependencies:
 
   - name: blackbox-exporter
     alias: blackbox_exporter
-    repository: file://vendor/blackbox-exporter
-    version: 0.1.0
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.0
     condition: blackbox_exporter.enabled
 
   - name: ping-exporter
