adds region, cluster_type label

--- a/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
+++ b/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
@@ -66,6 +66,19 @@ spec:
         - action: labelmap
           replacement: __param_$1
           regex: '__meta_kubernetes_service_annotation_prometheus_io_scrape_param_(.+)'
+        - action: replace
+          targetLabel: region
+          replacement: {{ required ".Values.global.region undefined" .Values.global.region }}
+        {{ if .Values.global.clusterType }}
+        - action: replace
+          targetLabel: cluster_type
+          replacement: {{ .Values.global.clusterType }}
+        {{ end }}
+        {{ if .Values.global.cluster }}
+        - action: replace
+          targetLabel: cluster
+          replacement: {{ .Values.global.cluster }}
+        {{ end }}
 
     - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       interval: 60s
@@ -116,4 +129,17 @@ spec:
         - action: labelmap
           replacement: __param_$1
           regex: '__meta_kubernetes_service_annotation_prometheus_io_scrape_param_(.+)'
+        - action: replace
+          targetLabel: region
+          replacement: {{ required ".Values.global.region undefined" .Values.global.region }}`
+        {{ if .Values.global.clusterType }}
+        - action: replace
+          targetLabel: cluster_type
+          replacement: {{ .Values.global.clusterType }}
+        {{ end }}
+        {{ if .Values.global.cluster }}
+        - action: replace
+          targetLabel: cluster
+          replacement: {{ .Values.global.cluster }}
+        {{ end }}
 {{- end }}
