--- a/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
+++ b/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
@@ -131,7 +131,7 @@ spec:
           regex: '__meta_kubernetes_service_annotation_prometheus_io_scrape_param_(.+)'
         - action: replace
           targetLabel: region
-          replacement: {{ required ".Values.global.region undefined" .Values.global.region }}`
+          replacement: {{ required ".Values.global.region undefined" .Values.global.region }}
         {{ if .Values.global.clusterType }}
         - action: replace
           targetLabel: cluster_type
