--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -161,6 +161,9 @@ kube-state-metrics:
 
   image:
     repository: sapcc/kube-state-metrics
+    # Newer versions of kube-state-metrics use k8s.io/api/apps/v1 for DaemonSet, Deployment and StatefulSet.
+    # Thus we need to stick with v1.5.0 until our k8s clusters were updated.
+    tag: v1.5.0
 
   rbac:
     create: false
