--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -179,6 +179,9 @@ kube-state-metrics:
     # not available in k8s1.7
     cronjobs: false
     horizontalpodautoscalers: false
+    # Not supported in kube-state-metrics v1.5.0 .
+    certificatesigningrequests: false
+    ingresses: false
 
   resources:
     requests:
