[mysql_metrics] define openstack as target prometheus

--- a/common/mysql_metrics/templates/deployment-promexp.yaml
+++ b/common/mysql_metrics/templates/deployment-promexp.yaml
@@ -23,6 +23,8 @@ spec:
       chart-version: {{ .Chart.Version }}
       prometheus.io/scrape: "true"
       prometheus.io/port: "{{ .Values.port_metrics_promexp }}"
+      prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
+
    spec:
     containers:
       - name: promexp-metrics
