--- a/common/mysql_metrics/values.yaml
+++ b/common/mysql_metrics/values.yaml
@@ -14,3 +14,17 @@ imageTag: 0.2.0
 image_promexp: prom/mysqld-exporter
 imageTag_promexp: v0.11.0
 imagePullPolicy: IfNotPresent
+
+
+# Default Prometheus alerts and rules.
+alerts:
+  enabled: true
+
+  # Name of the Prometheus supposed to scrape the metrics and to which alerts are assigned.
+  prometheus: openstack
+
+  # The tier of the alert.
+  tier: os
+
+  # Configurable service label of the alerts. Defaults to `.Release.Name`.
+  # service:
