--- a/common/mysql_metrics/templates/deployment.yaml
+++ b/common/mysql_metrics/templates/deployment.yaml
@@ -25,6 +25,7 @@ spec:
       checksum/etc-configmap.conf: {{ include (print $.Template.BasePath "/etc-configmap.yaml") . | sha256sum }}
       prometheus.io/scrape: "true"
       prometheus.io/port: "{{ .Values.port_metrics }}"
+      prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
    spec:
     volumes:
       - name: config-metrics
