[infra-monitoring] adds snmp n7k values

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -2,6 +2,9 @@ global:
   imageRegistry: hub.global.cloud.sap
   domain: cloud.sap
 
+  n7k:
+    version: DEFINED-IN-REGION-SECRECTS
+    community: DEFINED-IN-REGION-SECRECTS
   # Defined via secrets.
   # region:
   # cluster:
