[domain-seeds] refactored role-assignments

--- a/openstack/domain-seeds/templates/domain-default-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-default-seed.yaml
@@ -36,8 +36,11 @@ spec:
       description: 'Administrators'
       users:
       - admin
-      roles:
+      role_assignments:
       - project: admin
         role: admin
       - domain: Default
         role: admin
+      - system: all
+        role: admin
+
