--- a/openstack/domain-seeds/templates/domain-fsn-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-fsn-seed.yaml
@@ -42,7 +42,7 @@ spec:
 
     groups:
     - name: FSN_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: fsn
         role: admin
       - domain: fsn
@@ -54,7 +54,7 @@ spec:
         role: member
 
     - name: FSN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: fsn
         role: cloud_identity_viewer
         inherited: true
@@ -64,7 +64,7 @@ spec:
         role: member
 
     - name: FSN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: fsn
         role: cloud_identity_viewer
         inherited: true
@@ -74,7 +74,7 @@ spec:
         role: member
 
     - name: FSN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: fsn
         role: cloud_identity_viewer
         inherited: true
@@ -84,7 +84,7 @@ spec:
         role: member
 
     - name: FSN_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: fsn
         role: cloud_identity_viewer
         inherited: true
@@ -94,12 +94,12 @@ spec:
         role: member
 
     - name: FSN_DOMAIN_MEMBERS
-      roles:
+      role_assignments:
       - domain: fsn
         role: member
 
     - name: FSN_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - domain: fsn
         role: admin
       - domain: fsn
@@ -114,13 +114,13 @@ spec:
         role: admin
 
     - name: FSN_DOMAIN_NETWORK_ADMINS
-      roles:
+      role_assignments:
       - project: fsn-net-infra
         role: admin
       - project: fsn-shared-infra
         role: admin
     - name: FSN_DOMAIN_RESOURCE_ADMINS
-      roles:
+      role_assignments:
       - domain: fsn
         role: admin
 
