--- a/openstack/domain-seeds/templates/domain-hcp03-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-hcp03-seed.yaml
@@ -42,7 +42,7 @@ spec:
 
     groups:
     - name: HCP03_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcp03
         role: admin
       - domain: hcp03
@@ -54,7 +54,7 @@ spec:
         role: member
 
     - name: HCP03_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcp03
         role: cloud_identity_viewer
         inherited: true
@@ -64,7 +64,7 @@ spec:
         role: member
 
     - name: HCP03_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcp03
         role: cloud_identity_viewer
         inherited: true
@@ -74,7 +74,7 @@ spec:
         role: member
 
     - name: HCP03_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcp03
         role: cloud_identity_viewer
         inherited: true
@@ -84,7 +84,7 @@ spec:
         role: member
 
     - name: HCP03_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: hcp03
         role: cloud_identity_viewer
         inherited: true
@@ -94,12 +94,12 @@ spec:
         role: member
 
     - name: HCP03_DOMAIN_MEMBERS
-      roles:
+      role_assignments:
       - domain: hcp03
         role: member
 
     - name: HCP03_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - domain: hcp03
         role: admin
       - domain: hcp03
@@ -114,13 +114,13 @@ spec:
         role: admin
 
     - name: HCP03_DOMAIN_NETWORK_ADMINS
-      roles:
+      role_assignments:
       - project: hcp03-net-infra
         role: admin
       - project: hcp03-shared-infra
         role: admin
     - name: HCP03_DOMAIN_RESOURCE_ADMINS
-      roles:
+      role_assignments:
       - domain: hcp03
         role: admin
 
