--- a/openstack/domain-seeds/templates/domain-bs-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-bs-seed.yaml
@@ -42,7 +42,7 @@ spec:
 
     groups:
     - name: BS_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: bs
         role: admin
       - domain: bs
@@ -54,7 +54,7 @@ spec:
         role: member
 
     - name: BS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: bs
         role: cloud_identity_viewer
         inherited: true
@@ -64,7 +64,7 @@ spec:
         role: member
 
     - name: BS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: bs
         role: cloud_identity_viewer
         inherited: true
@@ -74,7 +74,7 @@ spec:
         role: member
 
     - name: BS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: bs
         role: cloud_identity_viewer
         inherited: true
@@ -84,7 +84,7 @@ spec:
         role: member
 
     - name: BS_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: bs
         role: cloud_identity_viewer
         inherited: true
@@ -94,12 +94,12 @@ spec:
         role: member
 
     - name: BS_DOMAIN_MEMBERS
-      roles:
+      role_assignments:
       - domain: bs
         role: member
 
     - name: BS_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - domain: bs
         role: admin
       - domain: bs
@@ -114,14 +114,14 @@ spec:
         role: member
 
     - name: BS_DOMAIN_NETWORK_ADMINS
-      roles:
+      role_assignments:
       - project: bs-net-infra
         role: admin
       - project: bs-shared-infra
         role: admin
 
     - name: BS_DOMAIN_RESOURCE_ADMINS
-      roles:
+      role_assignments:
       - domain: bs
         role: admin
 
