--- a/openstack/domain-seeds/templates/domain-ccadmin-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-ccadmin-seed.yaml
@@ -19,14 +19,14 @@ spec:
     projects:
     - name: cloud_admin
       description: 'Cloud Administrator Project'
-      roles:
+      role_assignments:
       - user: admin@Default
         role: admin
     - name: admin
       description: 'Domain Administrator Project'
     - name: master
       description: 'Container Project'
-      roles:
+      role_assignments:
       - user: admin@Default
         role: admin
     - name: ccadmin-net-infra
@@ -35,7 +35,7 @@ spec:
       description: 'Home of private networks, backup networks and routers for the ccadmin domain'
     - name: BaremetalMonitoring
       description: 'Appliances used for monitoring bare metal servers'
-      roles:
+      role_assignments:
       - group: CCADMIN_CLOUD_ADMINS
         role: admin
       - group: CCADMIN_CLOUD_ADMINS
@@ -79,7 +79,7 @@ spec:
 
     groups:
     - name: CCADMIN_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: admin
       - domain: ccadmin
@@ -95,7 +95,7 @@ spec:
         role: member
 
     - name: CCADMIN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: cloud_identity_viewer
         inherited: true
@@ -109,7 +109,7 @@ spec:
         role: member
 
     - name: CCADMIN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: cloud_identity_viewer
         inherited: true
@@ -123,7 +123,7 @@ spec:
         role: member
 
     - name: CCADMIN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: cloud_identity_viewer
         inherited: true
@@ -137,7 +137,7 @@ spec:
         role: member
 
     - name: CCADMIN_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: cloud_identity_viewer
         inherited: true
@@ -147,12 +147,12 @@ spec:
         role: member
 
     - name: CCADMIN_DOMAIN_MEMBERS
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: member
 
     - name: CCADMIN_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: admin
       - domain: ccadmin
@@ -173,7 +173,7 @@ spec:
         role: admin
 
     - name: CCADMIN_CLOUD_ADMINS
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: admin
       - domain: ccadmin
@@ -198,7 +198,7 @@ spec:
         role: admin
 
     - name: CCADMIN_DOMAIN_NETWORK_ADMINS
-      roles:
+      role_assignments:
       - project: ccadmin-net-infra
         role: admin
 
