--- a/openstack/domain-seeds/templates/domain-cp-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-cp-seed.yaml
@@ -42,7 +42,7 @@ spec:
 
     groups:
     - name: CP_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: cp
         role: admin
       - domain: cp
@@ -54,7 +54,7 @@ spec:
         role: member
 
     - name: CP_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: cp
         role: cloud_identity_viewer
         inherited: true
@@ -64,7 +64,7 @@ spec:
         role: member
 
     - name: CP_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: cp
         role: cloud_identity_viewer
         inherited: true
@@ -74,7 +74,7 @@ spec:
         role: member
 
     - name: CP_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: cp
         role: cloud_identity_viewer
         inherited: true
@@ -84,7 +84,7 @@ spec:
         role: member
 
     - name: CP_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: cp
         role: cloud_identity_viewer
         inherited: true
@@ -94,12 +94,12 @@ spec:
         role: member
 
     - name: CP_DOMAIN_MEMBERS
-      roles:
+      role_assignments:
       - domain: cp
         role: member
 
     - name: CP_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - domain: cp
         role: admin
       - domain: cp
@@ -114,13 +114,13 @@ spec:
         role: admin
 
     - name: CP_DOMAIN_NETWORK_ADMINS
-      roles:
+      role_assignments:
       - project: cp-net-infra
         role: admin
       - project: cp-shared-infra
         role: admin
     - name: CP_DOMAIN_RESOURCE_ADMINS
-      roles:
+      role_assignments:
       - domain: cp
         role: admin
 
