--- a/openstack/domain-seeds/templates/domain-hcm-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-hcm-seed.yaml
@@ -42,7 +42,7 @@ spec:
 
     groups:
     - name: HCM_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcm
         role: admin
       - domain: hcm
@@ -54,7 +54,7 @@ spec:
         role: member
 
     - name: HCM_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcm
         role: cloud_identity_viewer
         inherited: true
@@ -64,7 +64,7 @@ spec:
         role: member
 
     - name: HCM_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcm
         role: cloud_identity_viewer
         inherited: true
@@ -74,7 +74,7 @@ spec:
         role: member
 
     - name: HCM_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcm
         role: cloud_identity_viewer
         inherited: true
@@ -84,7 +84,7 @@ spec:
         role: member
 
     - name: HCM_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: hcm
         role: cloud_identity_viewer
         inherited: true
@@ -94,12 +94,12 @@ spec:
         role: member
 
     - name: HCM_DOMAIN_MEMBERS
-      roles:
+      role_assignments:
       - domain: hcm
         role: member
 
     - name: HCM_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - domain: hcm
         role: admin
       - domain: hcm
@@ -114,14 +114,14 @@ spec:
         role: admin
 
     - name: HCM_DOMAIN_NETWORK_ADMINS
-      roles:
+      role_assignments:
       - project: hcm-net-infra
         role: admin
       - project: hcm-shared-infra
         role: admin
 
     - name: HCM_DOMAIN_RESOURCE_ADMINS
-      roles:
+      role_assignments:
       - domain: hcm
         role: admin
 
