--- a/openstack/domain-seeds/templates/domain-hec-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-hec-seed.yaml
@@ -42,7 +42,7 @@ spec:
 
     groups:
     - name: HEC_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: hec
         role: admin
       - domain: hec
@@ -54,7 +54,7 @@ spec:
         role: member
 
     - name: HEC_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hec
         role: cloud_identity_viewer
         inherited: true
@@ -64,7 +64,7 @@ spec:
         role: member
 
     - name: HEC_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hec
         role: cloud_identity_viewer
         inherited: true
@@ -74,7 +74,7 @@ spec:
         role: member
 
     - name: HEC_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: hec
         role: cloud_identity_viewer
         inherited: true
@@ -84,7 +84,7 @@ spec:
         role: member
 
     - name: HEC_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: hec
         role: cloud_identity_viewer
         inherited: true
@@ -94,12 +94,12 @@ spec:
         role: member
 
     - name: HEC_DOMAIN_MEMBERS
-      roles:
+      role_assignments:
       - domain: hec
         role: member
 
     - name: HEC_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - domain: hec
         role: admin
       - domain: hec
@@ -114,14 +114,14 @@ spec:
         role: admin
 
     - name: HEC_DOMAIN_NETWORK_ADMINS
-      roles:
+      role_assignments:
       - project: hec-net-infra
         role: admin
       - project: hec-shared-infra
         role: admin
 
     - name: HEC_DOMAIN_RESOURCE_ADMINS
-      roles:
+      role_assignments:
       - domain: hec
         role: admin
 
