--- a/openstack/domain-seeds/templates/domain-monsoon3-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-monsoon3-seed.yaml
@@ -48,7 +48,7 @@ spec:
 
     groups:
     - name: MONSOON3_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: admin
       - domain: monsoon3
@@ -60,7 +60,7 @@ spec:
         role: member
 
     - name: MONSOON3_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: cloud_identity_viewer
         inherited: true
@@ -70,7 +70,7 @@ spec:
         role: member
 
     - name: MONSOON3_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: cloud_identity_viewer
         inherited: true
@@ -80,7 +80,7 @@ spec:
         role: member
 
     - name: MONSOON3_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: cloud_identity_viewer
         inherited: true
@@ -90,7 +90,7 @@ spec:
         role: member
 
     - name: MONSOON3_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: cloud_identity_viewer
         inherited: true
@@ -100,7 +100,7 @@ spec:
         role: member
 
     - name: MONSOON3_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: admin
       - domain: monsoon3
@@ -127,19 +127,19 @@ spec:
         role: member
 
     - name: MONSOON3_DOMAIN_MEMBERS
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: member
 
     - name: MONSOON3_DOMAIN_NETWORK_ADMINS
-      roles:
+      role_assignments:
       - project: monsoon3-net-infra
         role: admin
       - project: monsoon3-shared-infra
         role: admin
 
     - name: MONSOON3_DOMAIN_RESOURCE_ADMINS
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: admin
 
