--- a/openstack/domain-seeds/templates/domain-neo-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-neo-seed.yaml
@@ -42,7 +42,7 @@ spec:
 
     groups:
     - name: NEO_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: neo
         role: admin
       - domain: neo
@@ -54,7 +54,7 @@ spec:
         role: member
 
     - name: NEO_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: neo
         role: cloud_identity_viewer
         inherited: true
@@ -64,7 +64,7 @@ spec:
         role: member
 
     - name: NEO_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: neo
         role: cloud_identity_viewer
         inherited: true
@@ -74,7 +74,7 @@ spec:
         role: member
 
     - name: NEO_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: neo
         role: cloud_identity_viewer
         inherited: true
@@ -84,7 +84,7 @@ spec:
         role: member
 
     - name: NEO_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: neo
         role: cloud_identity_viewer
         inherited: true
@@ -94,12 +94,12 @@ spec:
         role: member
 
     - name: NEO_DOMAIN_MEMBERS
-      roles:
+      role_assignments:
       - domain: neo
         role: member
 
     - name: NEO_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - domain: neo
         role: admin
       - domain: neo
@@ -114,14 +114,14 @@ spec:
         role: member
 
     - name: NEO_DOMAIN_NETWORK_ADMINS
-      roles:
+      role_assignments:
       - project: neo-net-infra
         role: admin
       - project: neo-shared-infra
         role: admin
 
     - name: NEO_DOMAIN_RESOURCE_ADMINS
-      roles:
+      role_assignments:
       - domain: neo
         role: admin
 
