--- a/openstack/domain-seeds/templates/domain-s4-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-s4-seed.yaml
@@ -43,7 +43,7 @@ spec:
 
     groups:
     - name: S4_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: s4
         role: admin
       - domain: s4
@@ -55,7 +55,7 @@ spec:
         role: member
 
     - name: S4_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: s4
         role: cloud_identity_viewer
         inherited: true
@@ -65,7 +65,7 @@ spec:
         role: member
 
     - name: S4_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: s4
         role: cloud_identity_viewer
         inherited: true
@@ -75,7 +75,7 @@ spec:
         role: member
 
     - name: S4_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: s4
         role: cloud_identity_viewer
         inherited: true
@@ -85,7 +85,7 @@ spec:
         role: member
 
     - name: S4_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: s4
         role: cloud_identity_viewer
         inherited: true
@@ -95,12 +95,12 @@ spec:
         role: member
 
     - name: S4_DOMAIN_MEMBERS
-      roles:
+      role_assignments:
       - domain: s4
         role: member
 
     - name: S4_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - domain: s4
         role: member
       - domain: s4
@@ -115,14 +115,14 @@ spec:
         role: admin
 
     - name: S4_DOMAIN_NETWORK_ADMINS
-      roles:
+      role_assignments:
       - project: s4-net-infra
         role: admin
       - project: s4-shared-infra
         role: admin
 
     - name: S4_DOMAIN_RESOURCE_ADMINS
-      roles:
+      role_assignments:
       - domain: s4
         role: admin
 
