--- a/openstack/domain-seeds/templates/domain-wbs-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-wbs-seed.yaml
@@ -42,7 +42,7 @@ spec:
 
     groups:
     - name: WBS_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: wbs
         role: admin
       - domain: wbs
@@ -54,7 +54,7 @@ spec:
         role: member
 
     - name: WBS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: wbs
         role: cloud_identity_viewer
         inherited: true
@@ -64,7 +64,7 @@ spec:
         role: member
 
     - name: WBS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: wbs
         role: cloud_identity_viewer
         inherited: true
@@ -74,7 +74,7 @@ spec:
         role: member
 
     - name: WBS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: wbs
         role: cloud_identity_viewer
         inherited: true
@@ -84,7 +84,7 @@ spec:
         role: member
 
     - name: WBS_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: wbs
         role: cloud_identity_viewer
         inherited: true
@@ -94,12 +94,12 @@ spec:
         role: member
 
     - name: WBS_DOMAIN_MEMBERS
-      roles:
+      role_assignments:
       - domain: wbs
         role: member
 
     - name: WBS_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - domain: wbs
         role: admin
       - domain: wbs
@@ -114,13 +114,13 @@ spec:
         role: admin
 
     - name: WBS_DOMAIN_NETWORK_ADMINS
-      roles:
+      role_assignments:
       - project: wbs-net-infra
         role: admin
       - project: wbs-shared-infra
         role: admin
     - name: WBS_DOMAIN_RESOURCE_ADMINS
-      roles:
+      role_assignments:
       - domain: wbs
         role: admin
 
